--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -110,6 +110,12 @@
                 <a href="gamestudios.html">${TabStudios}</a>
             </div>
         </div>
+        <div class="itemTabs channelTabs" style="display: none;">
+            <div class="libraryViewNav scopedLibraryViewNav">
+                <a href="channelslatest.html">${TabLatest}</a>
+                <a href="channels.html" class="ui-btn-active">${TabChannels}</a>
+            </div>
+        </div>
 
         <div class="channelHeader" style="display: none;"></div>
 
