rework playlist ui

--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -128,10 +128,7 @@
                 </div>
                 <div class="tabPlaylist tabContent" style="display: none;">
 
-                    <div class="readOnlyContent" style="margin: 0 auto; padding: 0 1em;">
-
-                        <div class="playlist detailTableContainer">
-                        </div>
+                    <div class="playlist itemsContainer" style="max-width:800px;margin: 0 auto;">
                     </div>
 
                 </div>
