--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -16,7 +16,7 @@
         <div data-role="content" style="padding: 1em 0;">
 
             <div style="text-align: center;">
-                <div class="tabNowPlaying tabContent">
+                <div class="tabNowPlaying tabContent" style="display:none;">
                     <div class="itemName" style="line-height: normal;"></div>
                     <div class="nowPlayingPageImage" style="margin: 1em 0;"></div>
                     <div>
