--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -16,7 +16,7 @@
         <div data-role="content" style="padding-top: 5px;padding-left:0!important;padding-right:0!important;">
 
             <div class="tvGuide">
-                <div style="white-space: nowrap;position:fixed;top:98px;left:0;z-index:100; max-width: 100%;">
+                <div style="white-space: nowrap;position:fixed;top:98px;left:0;z-index:100; max-width: 100%;" class="tvGuideHeader">
                     <div class="channelTimeslotHeader">
                         <div class="timeslotHeaderInner">
                             <a href="#popupConfig" data-rel="popup" class="accentButton" style="display:block;padding-left:5px;"><i class="fa fa-calendar"></i><span class="currentDate"></span></a>
