--- a/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
@@ -19,6 +19,13 @@
                 </div>
 
                 <div class="serverList"></div>
+                <div class="newServer">
+                    <br />
+                    <a data-role="button" href="connectlogin.html?mode=manualserver" data-icon="plus">${ButtonNewServer}</a>
+                </div>
+                <div class="connectLogin">
+                    <a data-role="button" href="connectlogin.html?mode=connect" data-icon="action">${ButtonSignInWithConnect}</a>
+                </div>
                 <br />
                 <div class="noServersMessage" style="display:none;padding-left:5px;">
                     ${MessageNoServersAvailableToConnect}
