update login page

--- a/MediaBrowser.WebDashboard/dashboard-ui/forgotpasswordpin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/forgotpasswordpin.html
@@ -4,7 +4,7 @@
     <title>${TitlePasswordReset}</title>
 </head>
 <body>
-    <div data-role="page" class="page standalonePage forgotPasswordPage">
+    <div data-role="page" class="page standalonePage forgotPasswordPage" data-theme="b">
 
         <div data-role="content">
 
@@ -19,7 +19,7 @@
                     <br />
 
                     <p>
-                        <button type="submit" data-icon="check" data-theme="b">
+                        <button type="submit" data-icon="check">
                             ${ButtonSubmit}
                         </button>
                     </p>
