fix xbox one browser access

--- a/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
@@ -34,12 +34,12 @@
                 </p>
                 <div class="skip">
                     <br />
-                    <a class="btn btnDarkAccent" href="connectlogin.html?mode=manualserver">
+                    <button class="btn btnDarkAccent btnSkipConnect" data-role="none" type="button">
                         <span>
                             ${ButtonSkip}
                         </span>
                         <i class="fa fa-close"></i>
-                    </a>
+                    </button>
                     <div class="fieldDescription">${TextConnectToServerManually}</div>
                 </div>
 
