rename web client tab

--- a/MediaBrowser.WebDashboard/dashboard-ui/channelslatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channelslatest.html
@@ -7,7 +7,7 @@
     <div id="channelsLatestPage" data-role="page" class="page libraryPage channelsPage" data-contextname="${HeaderChannels}">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active">${TabLatest}</a>
+            <a href="#" class="ui-btn-active latestChannelItemsTab">${TabLatest}</a>
             <a href="channels.html">${TabChannels}</a>
         </div>
 
