--- a/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
@@ -13,8 +13,8 @@
             <a href="tvshows.html">${TabShows}</a>
             <a href="#" class="ui-btn-active">${TabEpisodes}</a>
             <a href="tvgenres.html">${TabGenres}</a>
-            <a href="tvpeople.html">${TabPeople}</a>
-            <a href="tvstudios.html">${TabNetworks}</a>
+            <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
+            <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
         </div>
 
         <div class="alphabetPicker">
