--- a/MediaBrowser.WebDashboard/dashboard-ui/moviepeople.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviepeople.html
@@ -13,7 +13,7 @@
             <a href="collections.html?context=movies">${TabCollections}</a>
             <a href="moviegenres.html">${TabGenres}</a>
             <a href="#" class="ui-btn-active">${TabPeople}</a>
-            <a href="moviestudios.html">${TabStudios}</a>
+            <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
         </div>
 
         <div class="alphabetPicker">
