--- a/MediaBrowser.WebDashboard/dashboard-ui/movietrailers.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movietrailers.html
@@ -12,8 +12,8 @@
             <a href="#" class="ui-btn-active">${TabTrailers}</a>
             <a href="collections.html?context=movies">${TabCollections}</a>
             <a href="moviegenres.html">${TabGenres}</a>
-            <a href="moviepeople.html">${TabPeople}</a>
-            <a href="moviestudios.html">${TabStudios}</a>
+            <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
+            <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
         </div>
 
         <div class="alphabetPicker">
