--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -10,7 +10,7 @@
             <a href="#" class="lnkDisplayPreferences">${TabDisplay}</a>
             <a href="#" class="lnkLanguagePreferences">${TabPlayback}</a>
             <a href="#" class="lnkMyProfile">${TabProfile}</a>
-            <a href="#" class="ui-btn-active lnkWebClientPreferences">${TabWebClient}</a>
+            <a href="#" class="ui-btn-active lnkWebClientPreferences">${TabAppSettings}</a>
         </div>
 
         <br />
