--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -8,7 +8,7 @@
 
         <div class="libraryViewNav globalNav" style="display: none;">
             <a href="index.html">${TabHome}</a>
-            <a href="homelatest.html">${TabLatest}</a>
+            <a href="homelatest.html" class="homeLatestTab">${TabLatest}</a>
             <a href="#" class="ui-btn-active">${TabNextUp}</a>
             <a href="favorites.html">${TabFavorites}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
@@ -18,10 +18,10 @@
             <a href="tvlatest.html">${TabLatest}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
             <a href="tvshows.html">${TabShows}</a>
-            <a href="episodes.html">${TabEpisodes}</a>
+            <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
             <a href="tvgenres.html">${TabGenres}</a>
-            <a href="tvpeople.html">${TabPeople}</a>
-            <a href="tvstudios.html">${TabNetworks}</a>
+            <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
+            <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
         </div>
         <div data-role="content">
             <div class="ehsContent">
