--- a/MediaBrowser.WebDashboard/dashboard-ui/channelitems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channelitems.html
@@ -7,7 +7,7 @@
     <div id="channelItemsPage" data-role="page" class="page libraryPage channelsPage" data-contextname="${HeaderChannels}">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="channelslatest.html">${TabLatest}</a>
+            <a href="channelslatest.html" class="latestChannelItemsTab">${TabLatest}</a>
             <a href="channels.html" class="ui-btn-active">${TabChannels}</a>
         </div>
 
