--- a/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
@@ -13,8 +13,8 @@
                 <a href="movietrailers.html">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
                 <a href="moviegenres.html" class="ui-btn-active">${TabGenres}</a>
-                <a href="moviepeople.html">${TabPeople}</a>
-                <a href="moviestudios.html">${TabStudios}</a>
+                <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
+                <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
             </div>
         </div>
         <div id="moviePeopleTabs" class="itemTabs" style="display: none;">
@@ -24,8 +24,8 @@
                 <a href="movietrailers.html">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
                 <a href="moviegenres.html">${TabGenres}</a>
-                <a href="moviepeople.html" class="ui-btn-active">${TabPeople}</a>
-                <a href="moviestudios.html">${TabStudios}</a>
+                <a href="moviepeople.html" class="ui-btn-active moviePeopleTab">${TabPeople}</a>
+                <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
             </div>
         </div>
         <div id="movieStudioTabs" class="itemTabs" style="display: none;">
@@ -35,8 +35,8 @@
                 <a href="movietrailers.html">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
                 <a href="moviegenres.html">${TabGenres}</a>
-                <a href="moviepeople.html">${TabPeople}</a>
-                <a href="moviestudios.html" class="ui-btn-active">${TabStudios}</a>
+                <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
+                <a href="moviestudios.html" class="ui-btn-active movieStudiosTab">${TabStudios}</a>
             </div>
         </div>
         <div id="tvGenreTabs" class="itemTabs" style="display: none;">
@@ -45,10 +45,10 @@
                 <a href="tvlatest.html">${TabLatest}</a>
                 <a href="tvupcoming.html">${TabUpcoming}</a>
                 <a href="tvshows.html">${TabShows}</a>
-                <a href="episodes.html">${TabEpisodes}</a>
+                <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
                 <a href="tvgenres.html" class="ui-btn-active">${TabGenres}</a>
-                <a href="tvpeople.html">${TabPeople}</a>
-                <a href="tvstudios.html">${TabNetworks}</a>
+                <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
+                <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
             </div>
         </div>
         <div id="tvPeopleTabs" class="itemTabs" style="display: none;">
@@ -57,10 +57,10 @@
                 <a href="tvlatest.html">${TabLatest}</a>
                 <a href="tvupcoming.html">${TabUpcoming}</a>
                 <a href="tvshows.html">${TabShows}</a>
-                <a href="episodes.html">${TabEpisodes}</a>
+                <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
                 <a href="tvgenres.html">${TabGenres}</a>
-                <a href="tvpeople.html" class="ui-btn-active">Actors</a>
-                <a href="tvstudios.html">${TabNetworks}</a>
+                <a href="tvpeople.html" class="ui-btn-active tvPeopleTab">Actors</a>
+                <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
             </div>
         </div>
         <div id="tvStudioTabs" class="itemTabs" style="display: none;">
@@ -69,19 +69,19 @@
                 <a href="tvlatest.html">${TabLatest}</a>
                 <a href="tvupcoming.html">${TabUpcoming}</a>
                 <a href="tvshows.html">${TabShows}</a>
-                <a href="episodes.html">${TabEpisodes}</a>
+                <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
                 <a href="tvgenres.html">${TabGenres}</a>
-                <a href="tvpeople.html">${TabPeople}</a>
-                <a href="tvstudios.html" class="ui-btn-active">${TabNetworks}</a>
+                <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
+                <a href="tvstudios.html" class="ui-btn-active tvStudiosTab">${TabNetworks}</a>
             </div>
         </div>
         <div id="musicGenreTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="musicrecommended.html">${TabSuggestions}</a>
-                <a href="songs.html">${TabSongs}</a>
+                <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
                 <a href="musicalbums.html">${TabAlbums}</a>
                 <a href="musicalbumartists.html">${TabAlbumArtists}</a>
-                <a href="musicartists.html">${TabArtists}</a>
+                <a href="musicartists.html" class="musicArtistsTab">${TabArtists}</a>
                 <a href="musicgenres.html" class="ui-btn-active">${TabGenres}</a>
                 <a href="musicvideos.html">${TabMusicVideos}</a>
             </div>
@@ -89,10 +89,10 @@
         <div id="artistTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="musicrecommended.html">${TabSuggestions}</a>
-                <a href="songs.html">${TabSongs}</a>
+                <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
                 <a href="musicalbums.html">${TabAlbums}</a>
                 <a href="musicalbumartists.html">${TabAlbumArtists}</a>
-                <a href="musicartists.html" class="ui-btn-active">${TabArtists}</a>
+                <a href="musicartists.html" class="ui-btn-active musicArtistsTab">${TabArtists}</a>
                 <a href="musicgenres.html">${TabGenres}</a>
                 <a href="musicvideos.html">${TabMusicVideos}</a>
             </div>
