--- a/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
@@ -12,8 +12,8 @@
             <a href="movietrailers.html">${TabTrailers}</a>
             <a href="collections.html?context=movies">${TabCollections}</a>
             <a href="moviegenres.html">${TabGenres}</a>
-            <a href="moviepeople.html">${TabPeople}</a>
-            <a href="moviestudios.html">${TabStudios}</a>
+            <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
+            <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
         </div>
         <div data-role="content">
 
