--- a/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
@@ -12,7 +12,7 @@
             <a href="movietrailers.html">${TabTrailers}</a>
             <a href="collections.html?context=movies">${TabCollections}</a>
             <a href="moviegenres.html">${TabGenres}</a>
-            <a href="moviepeople.html">${TabPeople}</a>
+            <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
             <a href="#" class="ui-btn-active">${TabStudios}</a>
         </div>
 
