--- a/MediaBrowser.WebDashboard/dashboard-ui/musicalbumartists.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicalbumartists.html
@@ -7,10 +7,10 @@
     <div id="musicAlbumArtistsPage" data-role="page" class="page libraryPage">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="musicrecommended.html">${TabSuggestions}</a>
-            <a href="songs.html">${TabSongs}</a>
+            <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
             <a href="musicalbums.html">${TabAlbums}</a>
             <a href="#" class="ui-btn-active">${TabAlbumArtists}</a>
-            <a href="musicartists.html">${TabArtists}</a>
+            <a href="musicartists.html" class="musicArtistsTab">${TabArtists}</a>
             <a href="musicgenres.html">${TabGenres}</a>
             <a href="musicvideos.html">${TabMusicVideos}</a>
         </div>
