--- a/MediaBrowser.WebDashboard/dashboard-ui/musicartists.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicartists.html
@@ -7,7 +7,7 @@
     <div id="musicArtistsPage" data-role="page" class="page libraryPage">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="musicrecommended.html">${TabSuggestions}</a>
-            <a href="songs.html">${TabSongs}</a>
+            <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
             <a href="musicalbums.html">${TabAlbums}</a>
             <a href="musicalbumartists.html">${TabAlbumArtists}</a>
             <a href="#" class="ui-btn-active">${TabArtists}</a>
