--- a/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
@@ -10,7 +10,7 @@
             <a href="#" class="lnkDisplayPreferences">${TabDisplay}</a>
             <a href="#" class="lnkLanguagePreferences">${TabPlayback}</a>
             <a href="#" class="ui-btn-active lnkMyProfile">${TabProfile}</a>
-            <a href="#" class="lnkWebClientPreferences">${TabWebClient}</a>
+            <a href="#" class="lnkWebClientPreferences">${TabAppSettings}</a>
         </div>
 
         <br />
