--- a/MediaBrowser.WebDashboard/dashboard-ui/songs.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/songs.html
@@ -10,7 +10,7 @@
             <a href="#" class="ui-btn-active">${TabSongs}</a>
             <a href="musicalbums.html">${TabAlbums}</a>
             <a href="musicalbumartists.html">${TabAlbumArtists}</a>
-            <a href="musicartists.html">${TabArtists}</a>
+            <a href="musicartists.html" class="musicArtistsTab">${TabArtists}</a>
             <a href="musicgenres.html">${TabGenres}</a>
             <a href="musicvideos.html">${TabMusicVideos}</a>
         </div>
