--- a/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
@@ -10,10 +10,10 @@
             <a href="tvlatest.html">${TabLatest}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
             <a href="#" class="ui-btn-active">${TabShows}</a>
-            <a href="episodes.html">${TabEpisodes}</a>
+            <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
             <a href="tvgenres.html">${TabGenres}</a>
-            <a href="tvpeople.html">${TabPeople}</a>
-            <a href="tvstudios.html">${TabNetworks}</a>
+            <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
+            <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
         </div>
         <div class="alphabetPicker">
         </div>
