--- a/MediaBrowser.WebDashboard/dashboard-ui/tvstudios.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvstudios.html
@@ -10,10 +10,10 @@
             <a href="tvlatest.html">${TabLatest}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
             <a href="tvshows.html">${TabShows}</a>
-            <a href="episodes.html">${TabEpisodes}</a>
+            <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
             <a href="tvgenres.html">${TabGenres}</a>
-            <a href="tvpeople.html">${TabPeople}</a>
-            <a href="#" class="ui-btn-active">${TabNetworks}</a>
+            <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
+            <a href="#" class="ui-btn-active tvStudiosTab">${TabNetworks}</a>
         </div>
         <div data-role="content">
             <div class="viewSettings">
