--- a/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
@@ -7,7 +7,7 @@
     <div id="tvUpcomingPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series">
         <div class="libraryViewNav globalNav" style="display: none;">
             <a href="index.html">${TabHome}</a>
-            <a href="homelatest.html">${TabLatest}</a>
+            <a href="homelatest.html" class="homeLatestTab">${TabLatest}</a>
             <a href="tvrecommended.html">${TabNextUp}</a>
             <a href="favorites.html">${TabFavorites}</a>
             <a href="#" class="ui-btn-active">${TabUpcoming}</a>
@@ -17,10 +17,10 @@
             <a href="tvlatest.html">${TabLatest}</a>
             <a href="tvupcoming.html" class="ui-btn-active">${TabUpcoming}</a>
             <a href="tvshows.html">${TabShows}</a>
-            <a href="episodes.html">${TabEpisodes}</a>
+            <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
             <a href="tvgenres.html">${TabGenres}</a>
-            <a href="tvpeople.html">${TabPeople}</a>
-            <a href="tvstudios.html">${TabNetworks}</a>
+            <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
+            <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
         </div>
         <div data-role="content">
             <div class="ehsContent">
